--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.16.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-easy-state": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   },
   "scripts": {
