--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   },
+  "engines": {
+    "node": "~10.7.0",
+    "npm": "~6.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "react-scripts build"
   }
 }
