--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "sweetalert2-react": "^0.7.2"
   },
   "engines": {
     "node": "~10.7.0",
