--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.3",
+    "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-easy-state": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "2.0.4",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "sweetalert2-react": "^0.7.2"
@@ -29,5 +30,11 @@
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
