--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.3",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.18.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-easy-state": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
+    "react-scripts": "^3.0.1",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "sweetalert2-react": "^0.7.2"
   },
   "engines": {
-    "node": "~10.7.0",
-    "npm": "~6.2.0"
+    "node": "~12.1.0",
+    "npm": "~6.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
