--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.4",
-    "node-sass": "^4.12.0",
+    "node-sass": "npm:sass@^1.57.1",
     "nodemon": "^1.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
