--- a/package.json
+++ b/package.json
@@ -8,16 +8,12 @@
     "nodemon": "^1.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-easy-state": "^5.1.0",
+    "@risingstack/react-easy-state": "^6.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "sweetalert2-react": "^0.7.2"
-  },
-  "engines": {
-    "node": "~12.1.0",
-    "npm": "~6.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,8 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "server": "nodemon src/server/index.js",
-    "postinstall": "react-scripts build"
+    "server": "nodemon src/server/index.js"
   },
   "devDependencies": {
     "concurrently": "^4.1.0"
