--- a/DockerFile
+++ b/DockerFile
@@ -4,20 +4,20 @@ FROM node:14
 # Set the working directory
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
+# Copy package.json and yarn.lock to the working directory
+COPY package.json yarn.lock ./
 
-# Install dependencies
-RUN npm install
+# Install dependencies using Yarn
+RUN yarn install
 
-# Copy the rest of the application code
+# Copy the rest of the application code to the working directory
 COPY . .
 
 # Build the React application
-RUN npm run build
+RUN yarn build
 
 # Expose the port the app runs on
 EXPOSE 8080
 
 # Start the server and client
-CMD ["npm", "run", "dev"]
+CMD ["yarn", "dev"]
