--- a/DockerFile
+++ b/DockerFile
@@ -1,13 +1,13 @@
-# Use an official Node runtime as a parent image
-FROM node:14
+# Use an official Node.js runtime as a parent image
+FROM node:18-alpine
 
-# Set the working directory
+# Set the working directory to /app
 WORKDIR /app
 
 # Copy package.json and yarn.lock to the working directory
 COPY package.json yarn.lock ./
 
-# Install dependencies using Yarn
+# Install dependencies using yarn
 RUN yarn install
 
 # Copy the rest of the application code to the working directory
@@ -17,7 +17,10 @@ COPY . .
 RUN yarn build
 
 # Expose the port the app runs on
-EXPOSE 8080
+EXPOSE 3000
 
-# Start the server and client
+# Define environment variable
+ENV NODE_ENV production
+
+# Start the application
 CMD ["yarn", "dev"]
