--- a/fly.toml
+++ b/fly.toml
@@ -1,46 +1,55 @@
-# fly.toml app configuration file generated for react-fridge-poet on 2024-06-07T21:05:09+02:00
+# fly.toml app configuration file generated for react-fridge-poet on 2024-06-07T21:21:26+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'react-fridge-poet'
 primary_region = 'mad'
-
-[build]
-  image = "node:14"
-
-[env]
-  NODE_ENV = "production"
-
-[deploy]
-  release_command = "npm run build"
+kill_signal = 'SIGINT'
+kill_timeout = '5s'
 
 [experimental]
+  auto_rollback = true
+
+[build]
+
+[env]
+  PORT = '3000'
+
+[http_service]
+  internal_port = 3000
+  force_https = true
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
+  processes = ['app']
 
 [[services]]
-  internal_port = 8080
-  protocol = "tcp"
+  protocol = 'tcp'
+  internal_port = 3000
+
+  [[services.ports]]
+    port = 80
+    handlers = ['http']
+
+  [[services.ports]]
+    port = 443
+    handlers = ['tls', 'http']
 
   [services.concurrency]
+    type = 'connections'
     hard_limit = 25
     soft_limit = 20
 
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
+  [[http_service.checks]]
+    grace_period = "30s"  
+    interval = "15s"   
+    method = "get"   
+    path = "/health"   
+    timeout = "2s"   
 
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
 
-  [[services.http_checks]]
-    interval = 10000
-    grace_period = "5s"
-    method = "get"
-    path = "/"
-    protocol = "http"
-    timeout = 2000
-    tls_skip_verify = false
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
