--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for react-fridge-poet on 2024-06-07T21:21:26+02:00
+# fly.toml app configuration file generated for react-fridge-poet on 2024-06-07T21:28:22+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -24,6 +24,13 @@ kill_timeout = '5s'
   min_machines_running = 0
   processes = ['app']
 
+  [[http_service.checks]]
+    interval = '15s'
+    timeout = '2s'
+    grace_period = '30s'
+    method = 'get'
+    path = '/health'
+
 [[services]]
   protocol = 'tcp'
   internal_port = 3000
@@ -40,14 +47,6 @@ kill_timeout = '5s'
     type = 'connections'
     hard_limit = 25
     soft_limit = 20
-
-  [[http_service.checks]]
-    grace_period = "30s"  
-    interval = "15s"   
-    method = "get"   
-    path = "/health"   
-    timeout = "2s"   
-
 
 [[vm]]
   memory = '1gb'
