--- a/fly.toml
+++ b/fly.toml
@@ -29,7 +29,9 @@ kill_timeout = '5s'
     timeout = '2s'
     grace_period = '30s'
     method = 'get'
-    path = '/health'
+    path = '/'
+    protocol = 'ws'
+    headers = { Upgrade = 'websocket' }
 
 [[services]]
   protocol = 'tcp'
