--- a/fly.toml
+++ b/fly.toml
@@ -25,13 +25,12 @@ kill_timeout = '5s'
   processes = ['app']
 
   [[http_service.checks]]
-    interval = '15s'
+    interval = '5s'
     timeout = '2s'
     grace_period = '30s'
     method = 'get'
-    path = '/'
-    protocol = 'ws'
-    headers = { Upgrade = 'websocket' }
+    path = '/health'
+    protocol = 'http' 
 
 [[services]]
   protocol = 'tcp'
